Fixed whitespace wrapping text on admin tabs - IE 6
git-svn-id: http://substruct.googlecode.com/svn/trunk/plugins/substruct@70 6a1f77cc-a145-0410-afd8-bd7963fcc59f

--- a/assets/stylesheets/admin.css
+++ b/assets/stylesheets/admin.css
@@ -258,6 +258,7 @@ div.line {
 	width: 50px;
 	text-align: center;
 	padding-right: 10px;
+	white-space: nowrap;
 }
 #navigation ul.navigation li.active {
 	background-image: url(/plugin_assets/substruct/images/admin/active-tab-left.gif);
